--- a/RhythmGame.vcxproj
+++ b/RhythmGame.vcxproj
@@ -115,6 +115,7 @@
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Lane.cpp" />
+    <ClCompile Include="LongNote.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Note.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -320,6 +321,7 @@
     <ClInclude Include="common.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Lane.h" />
+    <ClInclude Include="LongNote.h" />
     <ClInclude Include="Note.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Title.h" />
