--- a/RhythmGame.vcxproj.filters
+++ b/RhythmGame.vcxproj.filters
@@ -156,6 +156,9 @@
     <ClCompile Include="Lane.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LongNote.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="App\icon.ico">
@@ -801,6 +804,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Lane.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LongNote.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
