--- a/RhythmGame.vcxproj
+++ b/RhythmGame.vcxproj
@@ -117,12 +117,13 @@
     <ClCompile Include="Lane.cpp" />
     <ClCompile Include="LongNote.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Note.cpp" />
+    <ClCompile Include="NoteBase.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Title.cpp" />
+    <ClCompile Include="Note.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="App\engine\texture\box-shadow\128.png" />
@@ -322,9 +323,10 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="Lane.h" />
     <ClInclude Include="LongNote.h" />
-    <ClInclude Include="Note.h" />
+    <ClInclude Include="NoteBase.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Title.h" />
+    <ClInclude Include="Note.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App\example\obj\blacksmith.obj">
